--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,12 @@ before_script:
   - export DISPLAY=:99.0
   - bundle exec rake test_app
 script:
-  - bundle exec rspec spec
+  - bundle exec rake rspec-rerun:spec
+notifications:
+  email:
+    - ryan@spreecommerce.com
+rvm:
+  - 2.1.5
+branches:
+  only:
+    - master
