--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
 language: ruby
+rvm:
+  - 2.1
+sudo: false
 before_script:
   - sh -e /etc/init.d/xvfb start
   - export DISPLAY=:99.0
   - bundle exec rake test_app
 script:
   - bundle exec rspec spec
-notifications:
-  email:
-    - ryan@spreecommerce.com
-rvm:
-  - 2.1.5
-branches:
-  only:
-    - master
