--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 rvm:
   - 2.1
 sudo: false
+cache: bundler
 before_script:
   - sh -e /etc/init.d/xvfb start
   - export DISPLAY=:99.0
