--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,26 @@
-language: ruby
-rvm:
-  - 2.2.4
-  - 2.3.0
-sudo: false
-cache: bundler
-before_script:
-  - sh -e /etc/init.d/xvfb start
-  - export DISPLAY=:99.0
-  - bundle exec rake test_app
+sudo: required
+dist: trusty
+
+before_script: "bundle install"
 script:
-  - bundle exec rspec spec
+  - bundle exec rake test_app
+  - bundle exec rake spec
+
+env:
+  - DB=mysql
+  - DB=postgres
+
+language: ruby
+
+rvm:
+  - 2.3.1
+  - 2.2.7
+
+gemfile:
+  - gemfiles/spree_3_1.gemfile
+  - gemfiles/spree_3_2.gemfile
+  - gemfiles/spree_3_3.gemfile
+  - gemfiles/spree_master.gemfile
+
+before_install:
+  - mysql -u root -e "GRANT ALL ON *.* TO 'travis'@'%';"
