--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,25 @@ language: ruby
 
 script:
   - bundle exec rake test_app
-  - travis_retry bundle exec rake spec
+  - bundle exec rake spec
 
 env:
   - DB=mysql
   - DB=postgres
 
+addons:
+  chrome: stable
+  postgresql: 9.4
+
 rvm:
-  - 2.3.7
+  - 2.3.8
   - 2.4.4
   - 2.5.1
 
 gemfile:
-  - gemfiles/spree_3_2.gemfile
-  - gemfiles/spree_3_3.gemfile
-  - gemfiles/spree_3_4.gemfile
   - gemfiles/spree_3_5.gemfile
   - gemfiles/spree_3_7.gemfile
+  - gemfiles/spree_4_0.gemfile
   - gemfiles/spree_master.gemfile
 
 before_install:
@@ -30,12 +32,23 @@ before_install:
 matrix:
   exclude:
     - rvm: 2.5.1
-      gemfile: gemfiles/spree_3_2.gemfile
-    - rvm: 2.5.1
-      gemfile: gemfiles/spree_3_3.gemfile
-    - rvm: 2.5.1
-      gemfile: gemfiles/spree_3_4.gemfile
-    - rvm: 2.5.1
       gemfile: gemfiles/spree_3_5.gemfile
+    - rvm: 2.4.4
+      gemfile: gemfiles/spree_4_0.gemfile
+    - rvm: 2.3.8
+      gemfile: gemfiles/spree_4_0.gemfile
+    - rvm: 2.4.4
+      gemfile: gemfiles/spree_master.gemfile
+    - rvm: 2.3.8
+      gemfile: gemfiles/spree_master.gemfile
   allow_failures:
         - gemfile: gemfiles/spree_master.gemfile
+
+before_install:
+  - mysql -u root -e "GRANT ALL ON *.* TO 'travis'@'%';"
+  - wget -N https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip -P ~/
+  - unzip ~/chromedriver_linux64.zip -d ~/
+  - rm ~/chromedriver_linux64.zip
+  - sudo mv -f ~/chromedriver /usr/local/share/
+  - sudo chmod +x /usr/local/share/chromedriver
+  - sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
