--- a/.travis.yml
+++ b/.travis.yml
@@ -1,54 +1,63 @@
-sudo: required
-dist: trusty
+---
+os: linux
+dist: bionic
+
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
+services:
+  - mysql
+  - postgresql
 
 language: ruby
 
-script:
-  - bundle exec rake test_app
-  - bundle exec rake spec
+rvm:
+  - 2.5
+  - 2.6
+  - 2.7
 
 env:
   - DB=mysql
   - DB=postgres
 
-addons:
-  chrome: stable
-  postgresql: 9.4
-
-rvm:
-  - 2.3.8
-  - 2.4.4
-  - 2.5.1
-
 gemfile:
-  - gemfiles/spree_3_5.gemfile
   - gemfiles/spree_3_7.gemfile
   - gemfiles/spree_4_0.gemfile
+  - gemfiles/spree_4_1.gemfile
   - gemfiles/spree_master.gemfile
 
-before_install:
-  - mysql -u root -e "GRANT ALL ON *.* TO 'travis'@'%';"
-
-matrix:
+jobs:
   exclude:
-    - rvm: 2.5.1
-      gemfile: gemfiles/spree_3_5.gemfile
-    - rvm: 2.4.4
+    - rvm: 2.6
+      gemfile: gemfiles/spree_3_7.gemfile
+    - rvm: 2.7
+      gemfile: gemfiles/spree_3_7.gemfile
+    - rvm: 2.5
       gemfile: gemfiles/spree_4_0.gemfile
-    - rvm: 2.3.8
+    - rvm: 2.7
       gemfile: gemfiles/spree_4_0.gemfile
-    - rvm: 2.4.4
-      gemfile: gemfiles/spree_master.gemfile
-    - rvm: 2.3.8
+    - rvm: 2.5
+      gemfile: gemfiles/spree_4_1.gemfile
+    - rvm: 2.7
+      gemfile: gemfiles/spree_4_1.gemfile
+    - rvm: 2.5
       gemfile: gemfiles/spree_master.gemfile
   allow_failures:
-        - gemfile: gemfiles/spree_master.gemfile
+    - gemfile: gemfiles/spree_master.gemfile
 
 before_install:
   - mysql -u root -e "GRANT ALL ON *.* TO 'travis'@'%';"
-  - wget -N https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip -P ~/
-  - unzip ~/chromedriver_linux64.zip -d ~/
-  - rm ~/chromedriver_linux64.zip
-  - sudo mv -f ~/chromedriver /usr/local/share/
-  - sudo chmod +x /usr/local/share/chromedriver
-  - sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
+
+before_script:
+  - CHROME_MAIN_VERSION=`google-chrome-stable --version | sed -E 's/(^Google Chrome |\.[0-9]+ )//g'`
+  - CHROMEDRIVER_VERSION=`curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_MAIN_VERSION"`
+  - curl "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip" -O
+  - unzip chromedriver_linux64.zip -d ~/bin
+
+script:
+  - bundle exec rake test_app
+  - bundle exec rake spec
